--- a/zigbee2mqtt-data/configuration.yaml
+++ b/zigbee2mqtt-data/configuration.yaml
@@ -2,7 +2,11 @@ homeassistant: false
 permit_join: true
 mqtt:
   base_topic: zigbee2mqtt
-  server: 'mqtt://localhost'
+  server: 'mqtt://mqttbroker'
+
+# Enable the Zigbee2MQTT frontend
+frontend:
+  port: 8080
 serial:
   port: /dev/ttyACM0
 devices:
